--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante de el post</h1>
                 <p>y este es el parrafo de inicio donde vamos a exolicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar</p>
             </div>
         </div>
     </body>
