--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo de el post</title>
+        <title>El titulo de el hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
